For each of the delete operations, we log two lines: a WRITE line and a COMMAND line which have mostly the same information, with the exception that the WRITE line shows numYields whereas the COMMAND line shows it as 0.
COMMAND line does not show numYields
ExportXML Word Printable JSON
- Assignee:
-
Sam Mercier
- Reporter:
-
Dmitry Agranat
- Votes:
-
1 Vote for this issue - Watchers:
-
8 Start watching this issue
- Created:
- Updated:
- Resolved: