SERVER-33870 make numYields of parent CurOps reflect child yields